[package]
name = "system_evolution"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git" }
bevy_rapier3d = { git = "https://github.com/flmng0/bevy_rapier.git", features = ["debug-render-3d", "simd-nightly"]}
leafwing-input-manager = { git = "https://github.com/sutorio/leafwing-input-manager.git" }
serde = "1.0.162"
spew = "0.2.2"
